--- a/index.html
+++ b/index.html
@@ -22,45 +22,50 @@
             </h1>
             <ul class="sousmenu" type="none">
                 <li class="animate__animated animate__fadeIn">
-                    <h2> <a href="#"> Lorem, ipsum.</a> </h2>
+                    <h2> <i class="fab fa-affiliatetheme mr-1"></i><a href="#services">Services</a> </h2>
                 </li>
                 <li class="animate__animated animate__fadeIn">
-                    <h2> <a href="#"> Lorem, ipsum.</a> </h2>
+                    <h2><i class="fa-solid fa-layer-group mr-1"></i> <a href="#stack">Tech Stack</a> </h2>
                 </li>
-                <li class="animate__animated  animate__fadeIn animate__delay-3s">
-                    <h2> <a href="#"> Lorem, ipsum.</a> </h2>
+                <li class="animate__animated animate__fadeIn">
+                    <h2> <i class="fas fa-graduation-cap mr-1"></i><a href="#formation">Formations</a> </h2>
                 </li>
-                <li class="animate__animated  animate__fadeIn animate__delay-3s">
-                    <h2> <a href="#"> Lorem, ipsum.</a> </h2>
+                <li class="animate__animated  animate__fadeIn">
+                    <h2> <i class="fas fa-phone-square-alt mr-1"></i><a href="#contact">Contact</a> </h2>
                 </li>
-                <li class="animate__animated  animate__fadeIn animate__delay-4s">
-                    <h2> <a href="#"> Lorem, ipsum.</a> </h2>
+                <li class="animate__animated  animate__fadeIn">
+                    <h2><i class="fas fa-briefcase mr-1"></i> <a href="#projet">Réalisations</a> </h2>
                 </li>
-                <li class="animate__animated  animate__fadeIn animate__delay-4s">
-                    <h2> <a href="#"> Lorem, ipsum.</a> </h2>
-                </li>
-                <li class="animate__animated  animate__fadeIn animate__delay-4s">
-                    <h2> <a href="#"> Lorem, ipsum.</a> </h2>
+                <li class="animate__animated  animate__fadeIn">
+                    <h2><i class="fas fa-language mr-1"></i><a href="#langue" >Langues</a> </h2>
                 </li>
             </ul>
         </div>
         <header class="header">
             <nav>
                 <span class="brand">
-                    <img src="img/logo.png" width="20%" height="20%" alt="logo DiokouTech" srcset="">
+                    <img src="img/logo_Diokou.png" width="200" height="auto" alt="logo DiokouTech" srcset="">
                 </span>
                 <ul type="none" class="social_media">
-                    <li> <a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
-                    <li><a href="#"> <i class="fa-brands fa-github"></i> </li>
-                    <li> <a href="#"> <i class="fa-brands fa-twitter"></i> </li>
-                    <li><a href="#"> <i class="fa-brands fa-instagram"></i> </li>
+                    <li> <a href="#" title="linkedin"><i class="fa-brands fa-linkedin-in"></i></a></li>
+                    <li><a href="#" title="github"> <i class="fa-brands fa-github"></i> </li>
+                    <li> <a href="#" title="twitter"> <i class="fa-brands fa-twitter"></i> </li>
+                    <li><a href="#" title="instagram"> <i class="fa-brands fa-instagram"></i> </li>
                 </ul>
 
                 <a class="btn" title="Menu" href="#" onclick="toggle()">
-                    <h1> <i class="fa-solid fa-bars-staggered"></i> </h1>
+                    <h1> <i class="fa-solid fa-bars-staggered"></i></h1>
                 </a>
             </nav>
             <!-- corsp header -->
+            <section>
+                <div>
+
+                </div>
+                <div>
+
+                </div>
+            </section>
         </header>
     </div>
 </body>
