--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
             </h1>
             <ul class="sousmenu" type="none">
                 <li class="animate__animated animate__fadeIn">
-                    <h2> <i class="fab fa-affiliatetheme mr-1"></i><a onclick="toggle()" href="#services">Services</a> </h2>
+                    <h2> <i class="fab fa-affiliatetheme mr-1"></i><a onclick="toggle()" href="#services">Services</a>
+                    </h2>
                 </li>
                 <li class="animate__animated animate__fadeIn">
                     <h2><i class="fa-solid fa-layer-group mr-1"></i> <a href="#stack">Tech Stack</a> </h2>
@@ -81,40 +82,75 @@
         </header>
     </div>
     <!-- services -->
-    <h1  class="titre flex justify-evenly items-center">
+    <h1 class="titre flex justify-evenly items-center">
         <img src="./img/services.svg" width="200" alt="">
         <span>Ce que je peux vous offrir !</span>
     </h1>
     <div class="flex justify-evenly items-center" id="services">
-            <div class="card">
-                <h2>Solutions numériques</h2>
-                <ul>
-                    <li>Site Vitrine</li>
-                    <li>Site Web</li>
-                    <li>Application Web</li>
-                    <li>Apis Web</li>
-                    <li>Administratin de base de données</li>
-                </ul>
-            </div>
-            <div class="card">
-                <h2>E-Marketing</h2>
-                <ul>
-                    <li>Communicatin digitale</li>
-                    <li>Rédaction de contenues</li>
-                    <li>Présence Web</li>
-                </ul>
-            </div>
-            <div class="card">
-                <h2>Prod audiovisuelle</h2>
-                <ul>
-                    <li>Publicité</li>
-                    <li>Cartes de membres</li>
-                    <li>Logos & flyers</li>
-                    <li>Affiches</li>
-                    <li>Maquette Web</li>
-                </ul>
-            </div>
+        <div class="card">
+            <h2>Solutions numériques</h2>
+            <ul>
+                <li>Site Vitrine</li>
+                <li>Site Web</li>
+                <li>Application Web</li>
+                <li>Apis Web</li>
+                <li>Administratin de base de données</li>
+            </ul>
+        </div>
+        <div class="card">
+            <h2>E-Marketing</h2>
+            <ul>
+                <li>Communicatin digitale</li>
+                <li>Rédaction de contenues</li>
+                <li title="test">Présence Web</li>
+            </ul>
+        </div>
+        <div class="card">
+            <h2>Prod audiovisuelle</h2>
+            <ul>
+                <li>Publicité</li>
+                <li>Cartes de membres</li>
+                <li>Logos & flyers</li>
+                <li>Affiches</li>
+                <li>Maquette Web</li>
+            </ul>
+        </div>
     </div>
+    <!-- Stack -->
+    <h1 class="titre flex justify-evenly items-center">
+        <img src="./img/stack.svg" width="200" alt="">
+        <span>Mon plat préféré !</span>
+    </h1>
+    <div class="flex justify-evenly items-center" id="services">
+        <div class="stack">
+            <img src="/img/logo_php.jpg" width="80px" height="80px" title="Php" alt="">
+        </div>
+        <div class="stack">
+            <img src="/img/laravel.png" width="80px" height="80px" title="Laravel" alt="">
+        </div>
+
+        <div class="stack">
+            <img src="/img/lg_js.png" width="80px" height="80px" title="JavaScript" alt="">
+        </div>
+        <div class="stack">
+            <img src="/img/angular.png" width="80px" height="80px" title="Angular" alt="">
+        </div>
+        <div class="stack">
+            <img src="/img/nodejs.png" width="80px" height="80px" title="Node Js" alt="">
+        </div>
+        <div class="stack">
+            <img src="/img/nest.png" width="100px" height="80px" title="Nest Js" alt="">
+        </div>
+        <div class="stack">
+            <img src="/img/mng.png" width="80px" height="80px" title="BAse de données MongoDB" alt="">
+        </div>
+        <div class="stack">
+            <img src="/img/mysql.png" width="80px" height="80px" title="Mysql" alt="">
+        </div>
+    </div>
+    <footer>
+        <h5 class="footer">&copy; Diokou Cheikhou - 2022</h5>
+    </footer>
 </body>
 <script>
     function toggle() {
