update up button

--- a/index.html
+++ b/index.html
@@ -50,18 +50,8 @@
         <header class="header">
             <nav>
                 <span class="brand">
-                    <img src="img/logo_Diokou.png" width="150px" height="auto" alt="logo DiokouTech" srcset="">
+                    <img src="img/logo_Diokou.png" width="200px" height="auto" alt="logo DiokouTech" srcset="">
                 </span>
-                <ul type="none">
-                    <li> <a target="_blank" href="https://www.linkedin.com/in/cheikhou-diokou/" title="linkedin"><i
-                                class="fa-brands fa-linkedin-in"></i></a></li>
-                    <li><a target="_blank" href="https://github.com/Diokou-Tech" title="github"> <i
-                                class="fa-brands fa-github"></i> </li>
-                    <li> <a target="_blank" href="https://twitter.com/Diokou_Tech" title="twitter"> <i
-                                class="fa-brands fa-twitter"></i> </li>
-                    <li><a target="_blank" href="#" title="instagram"> <i class="fa-brands fa-instagram"></i> </li>
-                </ul>
-
                 <a class="btn" title="Menu" href="#" onclick="toggle()">
                     <h1> <i class="fa-solid fa-bars-staggered"></i></h1>
                 </a>
@@ -72,10 +62,13 @@
                     <h2> <img src="./img/profil.jpg" class="profil" width="300" alt="Photo de Cheikhou"
                             title="Photo de Cheikhou"> </h2>
                     <h1>Hi I'm Web Developer <small class="text-black">Full Stack</small></h1>
-                    <h1>Travail - Discipline - Créativité</h1>
+                    <h3>
+                        <cite> " Je n'ai vas pas travailler pour l'argent mais je ne travaillerai pas pour rien. Je suis
+                            toujours en train d'apprendre quelque chose "</cite> <b> Charles Aznavour</b>
+                    </h3>
                 </div>
                 <div class="desc animate__animated animate__fadeInRight">
-                    <p>
+                    <p style="color:black">
                         DIOKOU Cheikhou de mon vrai nom, Zola mon surnom depuis tout petit. Enfant j'ai toujours été
                         passionné des nouvelles technologies et du numérique.
                         Depuis le collège j'ai toujours été persuadé que le futur dépend du numérique et de ce qu'on
@@ -88,7 +81,10 @@
                         Since college I have always been convinced that the future depends on digital technology and
                         what we do with this precious tool.
                     </p>
-                    <span>#CodingForBetterLife</span> <span>#AspireFarther</span>
+                    <p style="color:black">
+                        <span title="Sonatel Academy">#CodingForBetterLife</span>
+                        <span title="Edacy">#AspireFarther</span>
+                    </p>
 
                 </div>
             </section>
@@ -171,13 +167,19 @@
         <img src="./img/projet.svg" width="200" alt="">
         <span>Mes Réalisations </span>
     </h1>
-    <div class="flex justify-evenly items-center" id="services">
+    <div class="flex justify-evenly items-center" id="projet">
         <div class="card">
             <h2>Niama App</h2>
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid ducimus expedita dolores voluptatum ea delectus. Consequatur, ut eius rem temporibus nihil unde? Facere aut a corporis reiciendis saepe id labore.
-                Eos in corrupti optio expedita. Repellat unde laudantium doloribus deserunt ipsum debitis culpa dolor similique sequi provident, quam enim in laborum ab deleniti reiciendis qui architecto, possimus repudiandae, soluta commodi!
-                Dolorem totam voluptatum inventore, optio reprehenderit nostrum unde perferendis, excepturi odit labore dignissimos enim consectetur non, omnis alias libero aliquid quas esse. Asperiores at, nostrum officiis perferendis eveniet quae eligendi!
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid ducimus expedita dolores voluptatum ea
+                delectus. Consequatur, ut eius rem temporibus nihil unde? Facere aut a corporis reiciendis saepe id
+                labore.
+                Eos in corrupti optio expedita. Repellat unde laudantium doloribus deserunt ipsum debitis culpa dolor
+                similique sequi provident, quam enim in laborum ab deleniti reiciendis qui architecto, possimus
+                repudiandae, soluta commodi!
+                Dolorem totam voluptatum inventore, optio reprehenderit nostrum unde perferendis, excepturi odit labore
+                dignissimos enim consectetur non, omnis alias libero aliquid quas esse. Asperiores at, nostrum officiis
+                perferendis eveniet quae eligendi!
             </p>
         </div>
         <div class="card">
@@ -192,14 +194,29 @@
         <img src="./img/contact.svg" width="200" alt="">
         <span>Me contacter !</span>
     </h1>
-    <div class="flex justify-evenly items-center" id="services">
+    <div class="flex justify-evenly items-center" id="contact">
         <div class="card">
-
+            <H2>Réseaux Sociaux</H2>
+            <ul type="none">
+                <li> <a target="_blank" href="https://www.linkedin.com/in/cheikhou-diokou/" title="linkedin"><i
+                            class="fa-brands fa-linkedin-in"></i></a></li>
+                <li><a target="_blank" href="https://github.com/Diokou-Tech" title="github"> <i
+                            class="fa-brands fa-github"></i> </a></li>
+                <li> <a target="_blank" href="https://twitter.com/Diokou_Tech" title="twitter"> <i
+                            class="fa-brands fa-twitter"></i></a> </li>
+                <li><a target="_blank" href="#" title="instagram"> <i class="fa-brands fa-instagram"></i></a></li>
+            </ul>
         </div>
         <div class="card">
-
+            <H2>Personnell</H2>
+            <ul>
+                <li> <i class="fa fa-message"></i> diokoutech@gmail.com </li>
+                <li><i class="fa fa-phone"> +221 76 576 54 04</i></li>
+            </ul>
         </div>
     </div>
+    <!-- button up scroll -->
+    <a href="#" class="up_scroll" title="vers le haut"><i class="fa-solid fa-up-long"></i></a>
     <footer>
         <h5 class="footer">&copy; Diokou Cheikhou - 2022</h5>
     </footer>
